--- a/.github/workflows/build-and-publish-container-image.yaml
+++ b/.github/workflows/build-and-publish-container-image.yaml
@@ -2,7 +2,8 @@ name: "When a release tag is created, build and publish a new version of the con
 
 on:
 
-  create
+  push: 
+    branches: [ main ]
 
 jobs:
 
