--- a/.github/workflows/build-and-publish-container-image.yaml
+++ b/.github/workflows/build-and-publish-container-image.yaml
@@ -16,6 +16,7 @@ jobs:
       CONTAINER_IMAGE: jsaraswathi/source-repo
       DOCKER_USER: ${{secrets.DOCKER_USER}}
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      IMAGE_VERSION: ${{ github.sha }}
 
     steps:
 
@@ -25,13 +26,7 @@ jobs:
       - name: Build image and version variables
         run: |
           echo "IMAGE=$CONTAINER_REGISTRY/$CONTAINER_IMAGE" >> $GITHUB_ENV
-          echo "IMAGE_VERSION=$(cat src/app/package.json | jq -r .version)" >> $GITHUB_ENV
           
-      - name: Build additional image tag variables
-        run: |
-          echo "IMAGE_MAJOR_VERSION=$(echo $IMAGE_VERSION | cut -d '.' -f1)" >> $GITHUB_ENV
-          echo "IMAGE_MINOR_VERSION=$(echo $IMAGE_VERSION | cut -d '.' -f2)" >> $GITHUB_ENV
-
       - name: Build image
         run: | 
           docker build --tag "$IMAGE:$IMAGE_VERSION" \
@@ -40,17 +35,11 @@ jobs:
             --build-arg IMAGE_SOURCE_REVISION="`git rev-parse HEAD`" \
             --file src/app/Dockerfile src/app
 
-      - name: Create additional image tags
-        run: |
-          docker tag $IMAGE:$IMAGE_VERSION $IMAGE:$IMAGE_MAJOR_VERSION
-          docker tag $IMAGE:$IMAGE_VERSION $IMAGE:$IMAGE_MAJOR_VERSION.$IMAGE_MINOR_VERSION
-
       - name: Log into registry
         run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
       - name: Push image and tags to registry
         run: |
           docker push $IMAGE:$IMAGE_VERSION
-          docker push $IMAGE:$IMAGE_MAJOR_VERSION
-          docker push $IMAGE:$IMAGE_MAJOR_VERSION.$IMAGE_MINOR_VERSION
+        
 
