--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-kubernetes
-  namespace: default
+  namespace: kube
 spec:
   replicas: 1
   selector:
