--- a/service.yaml
+++ b/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-kubernetes-svc
-  namespace: kube
+  namespace: spinnaker-app
 spec:
   selector:
     app: hello-kubernetes
