--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-kubernetes
-  namespace: kube
+  namespace: spinnaker-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: hello-kubernetes
