--- a/service.yaml
+++ b/service.yaml
@@ -7,5 +7,7 @@ spec:
   selector:
     app: hello-kubernetes
   ports:
-  - port: 8080
-    targetPort: 8080
+  - protocol: TCP
+    port: 8080
+    nodePort: 32329
+  type: NodePort
