--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,5 +14,5 @@ spec:
         app: hello-kubernetes
     spec:
       containers:
-      - image: index.docker.io/jsaraswathi/source-repo:latest
+      - image: index.docker.io/jsaraswathi/source-repo:203c7a59d100d4ee3717b80b11fb44aeaf21a8a4
         name: hello-kubernetes
