--- a/.github/workflows/build-and-publish-container-image.yaml
+++ b/.github/workflows/build-and-publish-container-image.yaml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Push image and tags to registry
         run: |
+          docker push $IMAGE:latest
           docker push $IMAGE:$IMAGE_VERSION
          
 
