--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,5 @@ spec:
         app: hello-kubernetes
     spec:
       containers:
-      - image: index.docker.io/jsaraswathi/source-repo
-        imagePullPolicy: Always
+      - image: index.docker.io/jsaraswathi/source-repo:latest
         name: hello-kubernetes
