--- a/.github/workflows/build-and-publish-container-image.yaml
+++ b/.github/workflows/build-and-publish-container-image.yaml
@@ -13,7 +13,7 @@ jobs:
 
     env:
       CONTAINER_REGISTRY: index.docker.io
-      CONTAINER_IMAGE: jsaraswathi/source-demo
+      CONTAINER_IMAGE: jsaraswathi/source-repo
       DOCKER_USER: ${{secrets.DOCKER_USER}}
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       IMAGE_VERSION: ${{ github.sha }}
