--- a/deploy/mainfests/deployment.yaml
+++ b/deploy/mainfests/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-kubernetes
-  namespace: spinnaker-app
+  namespace: hello-k8s
 spec:
   replicas: 1
   selector:
