--- a/deploy/mainfests/deployment.yaml
+++ b/deploy/mainfests/deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-kubernetes
-  namespace: example
+  namespace: hello-k8s
 spec:
-  replicas: 6
+  replicas: 2
   selector:
     matchLabels:
       app: hello-kubernetes
